# video-search

./: .gitignore  README.md  main.py  pyproject.toml
video_search/: hash.py  search.py  storage.py  video.py
video_search/cli/: main.py
video_search/gui/: main.py  workers.py
