[project]
name = "video-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=16.1.0",
    "imagehash>=4.3.2",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pyqt6>=6.10.2",
    "qt-material>=2.17",
    "rich>=14.3.2",
    "rich-pixels>=3.0.1",
    "scipy>=1.17.0",
    "scipy-stubs>=1.17.0.2",
    "typer>=0.21.1",
]
